<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:fillViewport="true"
    android:background="@color/app_bg"
    tools:context=".placedetails.presentation.PlaceDetailsFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/back_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:paddingStart="-2dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/place_details_cl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/place_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/effra_std_rg"
                android:text="@string/name_of_place"
                android:textColor="@color/text"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/distance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/effra_std_rg"
                android:text="@string/distance"
                android:textColor="@color/text"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/place_name_tv" />

            <TextView
                android:id="@+id/address_heading_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/effra_std_rg"
                android:text="@string/address"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/distance_tv" />

            <TextView
                android:id="@+id/address_value_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/effra_std_rg"
                android:text="@string/address"
                android:textColor="@color/text"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_heading_tv" />

            <TextView
                android:id="@+id/timezone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/effra_std_rg"
                android:text="@string/timezone"
                android:textColor="@color/text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_value_tv" />

            <TextView
                android:id="@+id/coordinates_heading_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/effra_std_rg"
                android:text="@string/coordinates"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timezone_tv" />

            <TextView
                android:id="@+id/latitude_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/effra_std_rg"
                android:text="@string/latitude"
                android:textColor="@color/text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coordinates_heading_tv" />

            <TextView
                android:id="@+id/longitude_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/effra_std_rg"
                android:text="@string/longitude"
                android:textColor="@color/text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/latitude_tv" />

            <TextView
                android:id="@+id/categories_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/effra_std_rg"
                android:text="@string/categories"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/longitude_tv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categories_rv"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categories_tv"
                tools:listitem="@layout/categories_rv_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <ProgressBar
            android:id="@+id/progress_bar_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/empty_list_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="110dp"
            android:textColor="@color/text"
            android:fontFamily="@font/effra_std_rg"
            android:textSize="16sp"
            android:gravity="center"
            android:visibility="gone"
            android:layout_gravity="bottom|center_horizontal"/>

        <Button
            android:id="@+id/retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:fontFamily="@font/effra_std_rg"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:visibility="gone"
            android:backgroundTint="@color/cyan"
            android:layout_marginBottom="50dp"
            android:layout_gravity="bottom|center_horizontal"/>
    </FrameLayout>
</androidx.core.widget.NestedScrollView>